# http-discovery-service

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: discovery.rs  main.rs  server.rs  service_mgmt.rs
