[package]
name = "http-discovery-service"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
axum = "0.7.9"
mdns-sd = "0.13.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
clap = { version = "4.5.21", features = ["derive"] }
service-manager = "0.7.1"
anyhow = "1.0.94"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[build-dependencies]
winres = "0.1"
